circle.yml updates

--- a/circle.yml
+++ b/circle.yml
@@ -37,16 +37,11 @@ dependencies:
   override:
     - cd helloworld
     - cd helloworld && ls -la
-    - cd helloworld/client && rm main.*
-    - cd helloworld && meteor add anti:gagarin@0.4.12
+    - cd helloworld && meteor add anti:gagarin@0.4.12 session meteor-platform clinical:theming clinical:default-theme clinical:router clinical:router-default-config clinical:active-layout clinical:active-layout-reset clinical:active-layout-pagescreen-config grove:less
     - cd helloworld && git clone http://github.com/clinical-meteor/hl7-resource-risk-assessment packages/hl7-resource-risk-assessment
     - cd helloworld && meteor add clinical:hl7-resource-risk-assessment clinical:hl7-resource-datatypes
     - cd helloworld/packages && ls -la
-    - cd helloworld/packages/hl7-resource-risk-assessment && ls -la
-    - cd helloworld/packages/hl7-resource-risk-assessment/tests && ls -la
-    - cd helloworld/packages/hl7-resource-risk-assessment/tests/gagarin && ls -la
     - cd helloworld && starrynight autoconfig
-    - cd helloworld && meteor npm install
     
 ## Customize test commands
 test:
