circle.yml tweaks

--- a/circle.yml
+++ b/circle.yml
@@ -40,7 +40,7 @@ dependencies:
     - cd helloworld && ls -la
     - cd helloworld && meteor npm install
     - cd helloworld && npm i --save-dev selenium-webdriver@3.0.0-beta-2 chromedriver
-    - cd helloworld && dispatch:mocha practicalmeteor:chai
+    - cd helloworld && meteor add dispatch:mocha practicalmeteor:chai
     - cd helloworld && meteor add clinical:hl7-resource-risk-assessment 
     - cd helloworld && mkdir imports 
     - cd helloworld && cp ../tests/integration.tests.js imports/
